@@ -564,6 +564,69 @@
         
         </pstype>
         
+		<!-- ========================================================================= -->
+		
+		<pstype name="MiniElementV1" version="2" type_id="Id_Cspad2x2Element">
+		
+		    CsPad data from single 2x2 element.
+		
+		    <const name="Nsbtemp" value="4">
+		    Number of the elements in _sbtemp array.
+		    </const>
+		
+            <attribute name="_word0" type="uint32_t" accessor="">
+            
+                <bitfield name="_bf_virtual_channel" size="2" type="uint32_t" accessor="virtual_channel">
+                Virtual channel number.
+                </bitfield>
+
+                <bitfield name="_bf_pad" size="4">
+                </bitfield>
+            
+                <bitfield name="_bf_lane" size="2" type="uint32_t" accessor="lane">
+                Lane number.
+                </bitfield>
+            
+                <bitfield name="_bf_tid" size="24" type="uint32_t" accessor="tid">
+                </bitfield>
+            
+            </attribute>
+
+            <attribute name="_word1" type="uint32_t" accessor="">
+
+                <bitfield name="_bf_acq_count" size="16" type="uint32_t" accessor="acq_count">
+                </bitfield>
+
+                <bitfield name="_bf_op_code" size="8" type="uint32_t" accessor="op_code">
+                </bitfield>
+
+                <bitfield name="_bf_quad" size="2" type="uint32_t" accessor="quad">
+                Quadrant number.
+                </bitfield>
+
+            </attribute>
+
+            <attribute name="_seq_count" type="uint32_t" accessor="seq_count">
+            </attribute>
+
+            <attribute name="_ticks" type="uint32_t" accessor="ticks">
+            </attribute>
+
+            <attribute name="_fiducials" type="uint32_t" accessor="fiducials">
+            </attribute>
+
+            <attribute name="_sbtemp" type="uint16_t" shape="Nsbtemp" accessor="sb_temp">
+            </attribute>
+
+            <attribute name="_frame_type" type="uint32_t" accessor="frame_type">
+            </attribute>
+
+            <attribute name="_data" type="uint16_t" shape="ColumnsPerASIC, MaxRowsPerASIC*2, 2" accessor="data">
+            </attribute>
+
+
+        </pstype>
+        
         
 	</package>
 </psddl>
