@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-12
+2011-09-12 Andrei Salnikov
+- adding CsPad.MiniElementV1 class
+
 Tag: V00-00-11
 2011-08-29 Andrei Salnikov
 - added Bld::BldDataPimV1 class
